@@ -27,14 +27,14 @@ public class OrderService {
         this.memberRepository = memberRepository;
     }
 
-    @Transactional(readOnly = true) //사용하여 주문 조회 최적화
-    public List<OrderDTO> getOrdersByMemberId(Long memberId) {
+    @Transactional(readOnly = true)
+    public List<OrderDTO> getOrdersByOauthId(String oauthId) {
         // 회원이 존재하는지 먼저 체크
-        Member member = memberRepository.findById(memberId)
+        Member member = memberRepository.findByOauthId(oauthId)
                 .orElseThrow(() -> new IllegalArgumentException("회원이 존재하지 않습니다."));
 
         // 주문 조회
-        List<Order> orders = orderRepository.findByMemberId(memberId);
+        List<Order> orders = orderRepository.findByOauthId(oauthId);
         if (orders.isEmpty()) {
             throw new IllegalArgumentException("주문이 존재하지 않습니다.");
         }
@@ -45,13 +45,15 @@ public class OrderService {
                         order.getId(),
                         order.getOrderStatus().name(),
                         order.getTotalPrice()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
-
     @Transactional
-    public void deleteOrder(Long orderId, Long memberId) {
-        Order order = orderRepository.findByIdAndMemberId(orderId, memberId)
+    public void deleteOrder(Long orderId, String oauthId) {
+        Member member = memberRepository.findByOauthId(oauthId)
+                .orElseThrow(() -> new IllegalArgumentException("회원이 존재하지 않습니다."));
+
+        Order order = orderRepository.findByIdAndOauthId(orderId, oauthId)
                 .orElseThrow(() -> new IllegalArgumentException("해당 주문이 존재하지 않거나 권한이 없습니다."));
 
         if (order.getOrderStatus() != OrderStatus.COMPLETE) {
@@ -61,5 +63,4 @@ public class OrderService {
         detailOrderRepository.deleteByOrderId(orderId);
         orderRepository.delete(order);
     }
-
 }
